# Static-webscraping

./: main.py  pyproject.toml  real_website.py
