[project]
name = "webscraping-beautifulsoup"
version = "0.1.0"
description = ""
authors = [
    {name = "Zainab Manzoor",email = "zainabmanzoorzoor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
